RF01Produzir formulário com quatro áreas, a saber: - Área 1: campos para CNPJ (com máscara), Razão Social, Nome Fantasia,Telefone (com máscara) e CNAE. Sobre o CNPJ, vide RF02. - Área 2: campos para Endereço (logradouro, número, bairro, CEP, cidade e estado).- Área 3: checkbox “Usa observação”. Caso este checkbox seja marcado, seráexibido um campo para inserir a observação propriamente dita. Deve ser utilizado o próprio formulário, não devendo ser aberto modal ou outras janelas. - Área 4: situação da empresa com 02 opções (Ativa e Inativa). Por padrão, deve virmarcada a opção Ativa.

--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -49,6 +49,7 @@ h5 {
 
 .form-check-label {
     padding-left: 0;
+    margin-right: 50px;
 }
 
 input[type=checkbox], input[type=radio] {
@@ -116,7 +117,7 @@ input[type=radio]:checked+.form-check-label__label .form-check-label--faux:after
     left: 50%;
     transform: translate3d(-50%, -50%, 0);
     border-radius: var(--lwc-borderRadiusCircle, 50%);
-    background: var(--lwc-brandAccessible, rgb(227, 49, 42, 1));
+    background: var(--lwc-brandAccessible, rgb(0, 79, 163, 1));
 }
 
 input[type=checkbox]:checked+.form-check-label_faux:after,
