--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -291,7 +291,7 @@ h6.helper i {
 }
 
 #sidebar ul li a {
-    color: #004fa3;
+    color: #464a4e;
     padding: 10px;
     font-size: 1.1em;
     display: block;
@@ -339,9 +339,10 @@ h6.helper i {
     font-size: 0.9rem;
 }
 #sidebar ul li.active>a,
-a[aria-expanded="true"] {
+#sidebar ul li.active>a[aria-expanded="true"] {
     font-weight: 600;
     background: #f9f9f9;
+    color: #004fa3;
 }
 
 a[data-toggle="collapse"] {
@@ -531,6 +532,10 @@ button, .table tr[onclick] {
     cursor: pointer;
 }
 
+tr.inativa {
+    opacity: .65;
+}
+
 .bootstrap-select .dropdown-menu.inner {
     max-width: 1rem;
 }
@@ -542,4 +547,116 @@ button, .table tr[onclick] {
 .bootstrap-select>.dropdown-toggle {
     background: #ffffff;
     border: 1px solid #ced4da;
+}
+
+.well {
+    min-height: 20px;
+    padding: 10px 18px;
+    margin: 10px 0 20px 0;
+    background-color: #f5f5f5;
+    border: 0px solid #e3e3e3;
+    border-radius: 4px;
+}
+
+.close-well {
+    float: right;
+    margin-top: -0.25rem;
+    top: 0;
+    right: 0;
+    z-index: 1;
+    font-size: .875rem;
+}
+
+.close-well a {
+    padding: 1px 4px;
+    border-radius: 4px;
+    color: rgba(0, 0, 0, 0.4);
+    transition: color 0.15s ease-in-out;
+}
+
+.filterbox {
+    padding: 10px 0;
+    margin: 1.5rem auto 1.5rem auto;
+    width: 100%;
+    min-height: 50px;
+    font-size: 13px;
+    border-radius: 15px;
+    border: 2px dashed #e7eaeb;
+}
+
+.filterbox-labels {
+    padding: 3px 8px 3px 8px;
+    display: inline-block;
+    margin: 3px;
+    border-radius: 20px;
+    color: #29235C;
+    background-color: #95C2E8;
+    font-weight: 300;
+}
+
+.filterbox-labels .close.close-tag {
+    font-size: 1.3rem;
+}
+
+.filterbox .approach-buttons {
+    text-align: right;
+}
+
+.filterbox .approach-buttons .btn-group {
+    border-left: 1px solid #e7eaeb;
+    padding: 0 0 0 10px;
+}
+
+.filter-select-label {
+    font-size: 1.075rem;
+}
+
+select.form-control {
+    font-size: 1rem;
+}
+
+.add-clean-actions {
+    padding-top: 2rem;
+}
+.btn:not(:disabled):not(.disabled) {
+    cursor: pointer;
+}
+.btn-gray {
+    color: #fff;
+    background-color: #555;
+    border-color: #ddd;
+    -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 1px rgba(0, 0, 0, 0.075);
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 1px rgba(0, 0, 0, 0.075);
+}
+.btn-gray:hover {
+    color: #242424;
+    background-color: #d0d0d0;
+    border-color: #c4c4c4;
+}
+.btn-gray:not(:disabled):not(.disabled):active,
+.btn-gray:not(:disabled):not(.disabled).active,
+.show>.btn-gray.dropdown-toggle {
+    color: #fff;
+    background-color: #3c3c3c;
+    border-color: #bdbdbd;
+}
+
+.spacer {
+    padding: 10px;
+}
+
+.clean-filter {
+    margin: -0.35rem 0.5rem 0 0;
+}
+
+.filterbox .filterbox-info {
+    font-style: italic;
+    color: #bbb;
+    padding-top: 0.25rem;
+}
+
+div#div-filtro-situacao {
+    align-content: flex-end;
+    display: grid;
+    margin-bottom: 10px;
 }
